groqcloud API adapted

--- a/env.example
+++ b/env.example
@@ -13,8 +13,8 @@ DB_PASSWORD=password
 # Redis Configuration
 REDIS_URL=redis://localhost:6379
 
-# OpenAI Configuration
-OPENAI_API_KEY=your_openai_api_key_here
+# Groq Configuration
+GROQ_API_KEY=your_groq_api_key_here
 
 # External API Keys (Optional - for live data)
 SPORTRADAR_API_KEY=your_sportradar_api_key_here
