--- a/package.json
+++ b/package.json
@@ -13,20 +13,20 @@
     "setup": "npm install && cd client && npm install"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "axios": "^1.6.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "openai": "^4.20.1",
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
+    "groq-sdk": "^0.7.0",
+    "helmet": "^7.1.0",
     "pg": "^8.11.3",
     "redis": "^4.6.10",
-    "axios": "^1.6.2",
-    "socket.io": "^4.7.4",
-    "helmet": "^7.1.0",
-    "express-rate-limit": "^7.1.5"
+    "socket.io": "^4.7.4"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2",
-    "concurrently": "^8.2.2"
+    "concurrently": "^8.2.2",
+    "nodemon": "^3.0.2"
   },
   "keywords": [
     "tennis",
