--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "server": "nodemon server.js",
     "client": "cd client && npm start",
+    "build": "cd client && npm run build",
     "start": "node server.js",
     "seed": "node seed.js",
     "setup": "npm install && cd client && npm install"
