--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "server": "nodemon server.js",
     "client": "cd client && npm start",
     "build": "cd client && npm run build",
-    "start": "npm run build && node server.js",
+    "start": "npm run build && npm run seed && node server.js",
     "seed": "node seed.js",
     "setup": "npm install && cd client && npm install",
     "postinstall": "cd client && npm install"
