--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,10 @@
     "@types/react-dom": "^19.1.9",
     "@types/socket.io-client": "^1.4.36",
     "axios": "^1.12.2",
+    "bootstrap": "^5.3.8",
+    "bootstrap-icons": "^1.13.1",
     "react": "^19.1.1",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1",
     "react-scripts": "5.0.1",
     "socket.io-client": "^4.8.1",
