--- a/env.example
+++ b/env.example
@@ -14,9 +14,9 @@ DB_PASSWORD=password
 # Groq Configuration
 GROQ_API_KEY=your_groq_api_key_here
 
-# External API Keys (Optional - for live data)
-SPORTRADAR_API_KEY=your_sportradar_api_key_here
-SPORTSDATAIO_API_KEY=your_sportsdataio_api_key_here
+# CSV Data Configuration (Local data loading)
+CSV_DATA_DIR=./data
+CSV_AUTO_LOAD=true
 
 # Security
 JWT_SECRET=your_jwt_secret_here
