--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express-rate-limit": "^7.1.5",
     "groq-sdk": "^0.7.0",
     "helmet": "^7.1.0",
+    "perplexityai": "^1.0.1",
     "pg": "^8.11.3",
     "redis": "^4.6.10",
     "socket.io": "^4.7.4"
