--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "postinstall": "cd client && npm install"
   },
   "dependencies": {
+    "@perplexity-ai/perplexity_ai": "^0.8.0",
     "axios": "^1.6.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -21,7 +22,6 @@
     "express-rate-limit": "^7.1.5",
     "groq-sdk": "^0.7.0",
     "helmet": "^7.1.0",
-    "perplexityai": "^1.0.1",
     "pg": "^8.11.3",
     "redis": "^4.6.10",
     "socket.io": "^4.7.4"
